--- a/style.css
+++ b/style.css
@@ -49,7 +49,10 @@ div.display h4 {
 div.display ul, div.display li{
     display: inline-block;
     text-decoration: none;
-    margin-left: 45px;
+    margin-left: 20px;
+    position: relative;
+    left: 50px;
+    right: -50px;
 }
 
 div.display li{
